--- a/Platform_Game/Platform_Game.vcxproj
+++ b/Platform_Game/Platform_Game.vcxproj
@@ -149,8 +149,10 @@
   <ItemGroup>
     <ClCompile Include="game_object.cpp" />
     <ClCompile Include="game_state.cpp" />
+    <ClCompile Include="ammo.cpp" />
     <ClCompile Include="level.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="pedestrian.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="timer.cpp" />
   </ItemGroup>
@@ -158,7 +160,9 @@
     <ClInclude Include="box.h" />
     <ClInclude Include="game_object.h" />
     <ClInclude Include="game_state.h" />
+    <ClInclude Include="ammo.h" />
     <ClInclude Include="level.h" />
+    <ClInclude Include="pedestrian.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="timer.h" />
   </ItemGroup>
