--- a/Platform_Game/Platform_Game.vcxproj
+++ b/Platform_Game/Platform_Game.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="character.cpp" />
+    <ClCompile Include="config.cpp" />
     <ClCompile Include="game_object.cpp" />
     <ClCompile Include="game_state.cpp" />
     <ClCompile Include="ammo.cpp" />
@@ -158,6 +160,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="box.h" />
+    <ClInclude Include="character.h" />
+    <ClInclude Include="config.h" />
     <ClInclude Include="game_object.h" />
     <ClInclude Include="game_state.h" />
     <ClInclude Include="ammo.h" />
