--- a/Platform_Game/Platform_Game.vcxproj.filters
+++ b/Platform_Game/Platform_Game.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="character.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stairs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game_state.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="stairs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
