--- a/Platform_Game/Platform_Game.vcxproj
+++ b/Platform_Game/Platform_Game.vcxproj
@@ -149,6 +149,8 @@
   <ItemGroup>
     <ClCompile Include="character.cpp" />
     <ClCompile Include="config.cpp" />
+    <ClCompile Include="cop.cpp" />
+    <ClCompile Include="first_level.cpp" />
     <ClCompile Include="game_object.cpp" />
     <ClCompile Include="game_state.cpp" />
     <ClCompile Include="ammo.cpp" />
@@ -163,6 +165,8 @@
     <ClInclude Include="box.h" />
     <ClInclude Include="character.h" />
     <ClInclude Include="config.h" />
+    <ClInclude Include="cop.h" />
+    <ClInclude Include="first_level.h" />
     <ClInclude Include="game_object.h" />
     <ClInclude Include="game_state.h" />
     <ClInclude Include="ammo.h" />
